# audio2text

./: .gitignore  pyproject.toml
audio2text/: main.py  processing.py
audio2text/static/: script.js  styles.css
templates/: edit.html  index.html
